<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Duellistes_V2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_solo">Solo</string>
    <string name="btn_multi">Multi</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_online">Online</string>
    <string name="txt_player">Player %d</string>
    <string name="txt_nbFights">Number of Fights : %d</string>
    <string name="txt_nbVic">Number of Victories : %d</string>
    <string name="txt_nbVicFollowed">Number of Followed Victories : %d</string>
    <string name="txt_nbVicFollowedRec">Record of Followed Victories : %d</string>
    <string name="txt_nbVicFollowed2">Number of Followed Victories : %d</string>
    <string name="txt_nbVic2">Number of Victories : %d</string>
    <string name="txt_nbFights2">Number of Fights : %d</string>
    <string name="txt_nbVicFollowedRec2">Record of Followed Victories : %d</string>
    <string name="txt_player2">Player %d</string>
    <string name="txt_chooseName">Choose your name</string>
    <string name="editName"/>
    <string name="btn_create">Create</string>
    <string name="txt_fight">Player 1 VS Player 2</string>
    <string name="btn_normalAttack">Normal</string>
    <string name="btn_subtileAttack">Subtle</string>
    <string name="btn_powerfulAttack">Powerful</string>
    <string name="txt_hpJ1">%1$s : %2$d pv</string>
    <string name="txt_hpJ2">%1$s : %2$d pv</string>
    <string name="txt_results">Results</string>
    <string name="txt_resultsFight">Winner</string>
    <string name="howToPlay">How To play</string>
    <string name="btn_imgChar">Choose</string>
    <string name="txt_chooseImgChar">Choose your character</string>

</resources>