<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeActivity"
    android:background="#7EB1F7" >

    <Button
        android:id="@+id/btn_solo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_solo"
        android:gravity="center"
        android:textSize="24sp"
    	android:layout_gravity="center"    	
 		android:minWidth="200dp" 
 		android:minHeight="70dp" 
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_multi"
        android:gravity="center"
        android:textSize="24sp"
    	android:layout_gravity="center"   	
 		android:minWidth="200dp" 
 		android:minHeight="70dp" 
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_solo" />
    
    <Button
        android:id="@+id/btn_tournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_tournament"
        android:gravity="center"
        android:textSize="24sp"
    	android:layout_gravity="center"   	
 		android:minWidth="200dp" 
 		android:minHeight="70dp" 
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_multi" />
    
    <Button
        android:id="@+id/btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_quit"
        android:gravity="center"
        android:textSize="24sp"
    	android:layout_gravity="center"   	
 		android:minWidth="200dp" 
 		android:minHeight="70dp" 
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_tournament" />

</RelativeLayout>